cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_154.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cms/cms_pwri.c:61: error: DEAD_STORE
  The value written to &pbe_nid (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/cms/cms_pwri.c:61:9: Write of unused value
59.   
60.       if (pbe_nid <= 0)
61.           pbe_nid = NID_id_pbkdf2;
              ^
62.   
63.       /* Get from enveloped data */
